# study_cmake

./: .gitignore  CMakeLists.txt  README.md  mkdocs.yml  readme
cmake/: BuildInfo.cmake
course/: 005.cmake  007.cmake
course/007/: CMakeLists.txt
course/007/sub/: CMakeLists.txt
course/008/: CMakeLists.txt
course/009/: string.cmake
course/010/: list.cmake
course/011/: math.cmake
course/012/: if.cmake  test.txt
course/013/: for.cmake
course/014/: while.cmake
course/015/: break_continue.cmake
course/016/: CMakeLists.txt
course/016/subdir/: CMakeLists.txt
course/017/: CMakeLists.txt
course/017/subdir/: CMakeLists.txt
course/018/: CMakeLists.txt
course/018/src/: CMakeLists.txt
course/019/: CMakeLists.txt
course/019/cmake/: test.cmake
course/019/subdir/: CMakeLists.txt
course/020/: CMakeLists.txt
course/020/child/: CMakeLists.txt
course/020/child/grandchild/: CMakeLists.txt
course/021/: CMakeLists.txt  test_include.cmake
course/021/subdir/: CMakeLists.txt
course/022/: func.cmake
course/023/: args.cmake
course/026/: override.cmake
course/028/: cmake_language.cmake
course/029/: args.cmake
course/031/: CMakeLists.txt
course/032/: CMakeLists.txt
course/032/app/: CMakeLists.txt
course/032/lib/: CMakeLists.txt
course/033/: CMakeLists.txt
doc/: 000_how_to_install_cmake.md  001_github+vscode+cmake_to_build_a_repo.md  002_vscode+cmake_to_debug.md  003_cmake_target_basic.md  004_cmake_var_basic.md  005_cmake_var_env.md  006_cmake_var_cache.md  007_cmake_var_scope.md  008_cmake_var_summarize.md  009_cmake_string.md  010_cmake_list.md  011_cmake_math.md  012_cmake_if.md  013_cmake_foreach.md  014_cmake_while.md  015_cmake_break_continue.md  016_cmake_add_subdirectory.md  017_scope_for_subdirectory.md  018_project_for_subdirectory.md  019_cmake_include.md  020_project_relative_variables.md  021_cmake_return.md  022_the_basics_of_functions_and_macros.md  023_argument_handling_essentials.md  024_keyword_arguments.md  025_functions_andmacros_returning_values.md  026_overriding_commands.md  027_special_variables_for_functions.md  028_othrer_ways_of_invoking_cmake_code.md  029_problems_with_argument_handling.md  030_cmake_general_property_cmd.md  031_cmake_global_property.md  032_cmake_directory_property.md  033_cmake_target_property.md  034_cmake_source_property.md  035_cmake_other_property.md  cmake_presets.md  cmake_toolchains.md
docs/: about.md  index.md
docs/about/: index.md
docs/advanced/: index.md
docs/beginner/: index.md
docs/bgyx/: index.md
docs/gcmj/: index.md
docs/jrjj/: index.md
docs/zltj/: index.md
examples/: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/study/: CMakeLists.txt
